# spectropaint

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs
gui/src/app/: editor_from_scratch.rs
gui/src/app/editor_from_scratch/: drawing.rs
gui/src/app/editor_from_scratch/drawing/: radius_brush.rs  solid_mag_brush.rs
spectrogram/: Cargo.toml
spectrogram/src/: forward.rs  inverse.rs  lib.rs
