[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui-file-dialog = "0.12.0"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = "0.25.9"
realfft = "3.5.0"
rodio = "0.21.1"
rustfft = "6.4.1"
spectrogram = { version = "0.1.0", path = "../spectrogram" }
# rodio
# rustfft
# realfft?
# eframe